--- a/4-Logistic regression.ipynb
+++ b/4-Logistic regression.ipynb
@@ -124,7 +124,7 @@
     "    fr = open('data_set/testSet.txt')\n",
     "    for line in fr.readlines():\n",
     "        lineArr = line.strip().split()\n",
-    "        # For the convenience of calculation,so we set \"x0\" = 1\n",
+    "        # For the convenience of calculation,so we set \"x0\" = 1，as same as bias.\n",
     "        dataMat.append([1.,float(lineArr[0]),float(lineArr[1])]) \n",
     "        labelMat.append(int(lineArr[2]))\n",
     "    return dataMat,labelMat"
