--- a/5-1Support vector machines(Theory).ipynb
+++ b/5-1Support vector machines(Theory).ipynb
@@ -74,7 +74,7 @@
    "source": [
     "那么此时，有\n",
     "- 当某点带入 $f(x)$是的$f(x)>0$,则该点在直线上方，说明属于圆圈.\n",
-    "- 当某点带入 $f(x)$是的$f(x)<0$,则该点在直线上方，说明属于叉叉.\n",
+    "- 当某点带入 $f(x)$是的$f(x)<0$,则该点在直线下方，说明属于叉叉.\n",
     "- 实际上$f(x)$还可能是0,也就是在这条直线上,那么这种情况的话，新进来的一个点到底属于圆圈还是叉叉就不知道了.实际上这个牵扯到的问题叫\"不适定问题\".实际上我们可以将直线稍微移动一下(当然依然是可以作为超平面),那么就会产生一条新的直线，那么到底是第一条直线好，还是第二条直线好呢?这就是一个不适定问题.![](picture/16.png)\n",
     "\n",
     "- 事实上,我们需要找一个超平面,能把两个类的点**最分开、分开的最清楚**的超平面才是最好的超平面应为它更加的健壮(也就是新数据进来很少落在超平面附近或者超平面上)\n",
@@ -277,7 +277,7 @@
     "\n",
     "这个函数意味着通过调整a的大小可以使得F函数最大(因为要运算的是$\\frac{1}{2}||W^{T}||^2$).\n",
     "- 当约束条件满足时,我们最大的F函数能提取到$\\frac{1}{2}||W^T||^2$.也就是有$C(W)=\\frac{1}{2}||W^T||^2$\n",
-    "- 当约束条件不满足时,即y_i(W^{T}x_i+b)< 1,一定可以调整a使得c(w)无穷大，这很简单就是令a为正无穷.\n",
+    "- 当约束条件不满足时,即$y_i(W^{T}x_i+b)< 1$,一定可以调整a使得c(w)无穷大，这很简单就是令a为正无穷.\n",
     "\n",
     "**最后原命题就等价于:**\n",
     "\n",
@@ -679,9 +679,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p style=\"color:blue\">可以看到唯一的区别就是现在a多了一个上限C,而在非线性的情况下,我们只需要使用kernel(核函数)把$<x_i,x_j>$换成$k(x_i,x_j)$就可以了.这样一来一个完整的可以处理线性和非线性并且能容忍噪声的的支持向量机就完成了.</p>\n",
-    "\n",
-    "那么下面开始证明最难最SMO算法(实话说这个真的很难需要一些数学功底,真感叹当时从零开始创建新东西的时候那些牛逼的人真的是牛逼的不要不要的)."
+    "<p style=\"color:blue\">可以看到唯一的区别就是现在a多了一个上限C,而在非线性的情况下,我们只需要使用kernel(核函数)把$<x_i,x_j>$换成$k(x_i,x_j)$就可以了.这样一来一个完整的可以处理线性和非线性并且能容忍噪声的的支持向量机就完成了.</p>\n"
    ]
   },
   {
