--- a/3-3 Naive Bayes(Gaussian).ipynb
+++ b/3-3 Naive Bayes(Gaussian).ipynb
@@ -6,6 +6,9 @@
    "source": [
     "#  Gaussian Naive Bayes\n",
     "\n",
+    "\n",
+    "[Gaussian Naive Bayes](http://i.stanford.edu/pub/cstr/reports/cs/tr/79/773/CS-TR-79-773.pdf)\n",
+    "\n",
     "高斯模型假设数据每一维特征都服从高斯分布.\n",
     "\n",
     "\n",
