--- a/4-1 Logistic Regression(Theory01).ipynb
+++ b/4-1 Logistic Regression(Theory01).ipynb
@@ -30,9 +30,10 @@
     "\n",
     "对于样本数据$X=\\{x_1,x_2,...,x_n\\}$,样本标签$Y=\\{y_1,y_2,...,y_n\\}$则预测值有:\n",
     "\n",
-    "$f(x)=w^{T} \\cdot x +b = (w_1x_1+b_1) + (w_2x_2+b_2)+(w_3x_3+b_3)+ \\cdot + (w_nx_n+b_n)$\n",
     "\n",
-    "其中$w$为权重,$b$为偏置.\n",
+    "$f(x_i)= \\sum_{p=1}^{P}w_{p}x_{ip} + b_i=w^{T}x_i+b$\n",
+    "\n",
+    "其中$w$为权重(weights),$b$为偏置(bias).体现为多个训练样本共同训练$w,b$\n",
     "\n",
     "但是如果以概率方面而言,很明显$f(x)$产生的值会大于1或者小于0.所以我们需要将该直线压缩到概率区间$[0,1]$之内,所以我们就有了二项LR回归(Binomial logistic regression),在工业界也称之为LR.\n",
     "\n",
@@ -41,7 +42,16 @@
     "**Ps:**\n",
     "\n",
     "(1) 这里的超平面概念将会在SVM中讨论.\n",
-    "\n"
+    "\n",
+    "(2) 权重和偏置同为拟合参数,权重主要控制超平面的角度而偏置则是超平面的截距.\n",
+    "\n",
+    "(3) 在后面的讨论中,我们有时候会将偏置放在权重中,以便于讨论的方便.\n",
+    "\n",
+    "(4) 在神经网络中,很少将偏置和权重放在一起,并且[偏置](https://www.jiqizhixin.com/articles/2018-07-05-18)也起到了非常重要的作用\n",
+    "\n",
+    "(5) 权重的意思,表示对应的属性在预测结果的权重,这个很好理解,权重越大,对于结果的影响越大\n",
+    "\n",
+    "(6) 偏置项决定了超平面的平移度"
    ]
   },
   {
@@ -166,7 +176,7 @@
     "\n",
     "损失函数的定义为:\n",
     "\n",
-    "$loss(w,b) = -\\frac{1}{N}\\cdot \\sum_{i=1}^{N}[y_ilog(\\hat{y_i})+(1-y_i)log(1-\\hat{y})]$"
+    "$loss(w,b) = -\\frac{1}{N}\\cdot \\sum_{i=1}^{N}[y_ilog(\\hat{y_i})+(1-y_i)log(1-\\hat{y_i})]$"
    ]
   },
   {
@@ -268,7 +278,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "这样就得到了参数的更新值$w_i,b_i$记为$dw_i,db_i$."
+    "这样就得到了参数的更新值$w_i,b_i$的导数记为$dw_i,db_i$."
    ]
   },
   {
@@ -374,6 +384,15 @@
     "\n",
     "\n",
     "所以我们一般都会选择折中方案: [mini-Batch](https://machinelearningmastery.com/gentle-introduction-mini-batch-gradient-descent-configure-batch-size/),将会在神经网络中讲解,所以这里就不多说了.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "以图形化解释GD,SGD:\n",
+    "\n",
+    "<img src=\"picture/63.png\" width=400 heigth=400>"
    ]
   },
   {
@@ -627,6 +646,27 @@
     "**Ps:**\n",
     "\n",
     "其实拟牛顿法运用了[凸优化理论](http://59.80.44.98/web.stanford.edu/~boyd/cvxbook/bv_cvxbook.pdf),想深入了解的可以仔细看看"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4 多分类\n",
+    "\n",
+    "上面讲述的是LR的二分类,那么基于二分类可以推广到多分类.\n",
+    "\n",
+    "假设离散随机变量$Y$的取值集合是$\\{1,2,...,K\\}$那么多分类的LR模型是:\n",
+    "\n",
+    "$P(Y=k|x)=\\frac{exp(w_k\\cdot x)}{1+\\sum_{k=1}^{K-1}exp(w_k\\cdot x)}$\n",
+    "\n",
+    "$P(Y=K|x)=\\frac{1}{1+\\sum_{k=1}^{K-1}exp(w_k\\cdot x)}$\n",
+    "\n",
+    "参数同理推广\n",
+    "\n",
+    "**Ps:**\n",
+    "\n",
+    "由于基于LR的多分类是[One-vs-rest](https://zh.wikipedia.org/wiki/%E5%A4%9A%E5%85%83%E5%88%86%E7%B1%BB)的,所以我们更加常用的是softmax模型."
    ]
   },
   {
