--- a/4-3 Logistic regression(Application).ipynb
+++ b/4-3 Logistic regression(Application).ipynb
@@ -104,7 +104,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x11a539a58>"
+       "<matplotlib.collections.PathCollection at 0x11b33d320>"
       ]
      },
      "execution_count": 4,
@@ -646,7 +646,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x11c752780>]"
+       "[<matplotlib.lines.Line2D at 0x11d554198>]"
       ]
      },
      "execution_count": 19,
@@ -1040,9 +1040,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iter:0,loss:nan\n",
+      "Iter:100,loss:nan\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -1055,8 +1063,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iter:0,loss:nan\n",
-      "Iter:100,loss:nan\n",
       "Iter:200,loss:nan\n",
       "Iter:300,loss:nan\n",
       "Iter:400,loss:inf\n",
@@ -1074,16 +1080,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x11ce20978>]"
+       "[<matplotlib.lines.Line2D at 0x11f551a58>]"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1106,7 +1112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1124,7 +1130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1150,7 +1156,13 @@
     "\n",
     "使用LR_Regular刚开始迭代的时候,存在梯度爆炸的问题,这个实际上是以为数据维度高,而我们欠缺优化超级参数,这点将在神经玩网络中说明.\n",
     "\n",
-    "无论怎样,结果还是不错的."
+    "无论怎样,结果还是不错的.\n",
+    "\n",
+    "另外这里出现了上下溢问题:\n",
+    "\n",
+    "- 数值上溢:大量级的数被近似为正无穷或负无穷时发生上溢,进一步运算导致无限值变为非数字.\n",
+    "\n",
+    "- 数值下溢:接近零的数被四舍五入为0时发生下溢.被零除,取零的对数，进一步运算会变为非数字."
    ]
   },
   {
