--- a/2-Decision Trees.ipynb
+++ b/2-Decision Trees.ipynb
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -466,14 +466,14 @@
        "'no surfacing'"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "best_feture = calcShannonEnt_feature(data)\n",
-    "best_feture"
+    "best_feature = calcShannonEnt_feature(data)\n",
+    "best_feature"
    ]
   },
   {
@@ -505,7 +505,7 @@
     "这里需要注意的是,对于非叶结点再次计算最优特征,**数据中不能涵盖已经使用过的最优特征**.即:\n",
     "\n",
     "```python\n",
-    "data_son.drop(columns=best_feture)```\n",
+    "data_son.drop(columns=best_feature)```\n",
     "\n",
     "最后次函数将返回两种值:\n",
     "\n",
@@ -518,39 +518,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def split_Trees(data,best_feture):\n",
+    "def split_Trees(data,best_feature):\n",
     "    \"\"\"\n",
     "    split data.\n",
     "    Parameters:\n",
     "    ----------\n",
     "        data: pandas data\n",
-    "        best_feture: best feature\n",
+    "        best_feature: best feature\n",
     "    \n",
     "    \"\"\"\n",
-    "    unique_bf = pd.unique(data[best_feture])\n",
+    "    unique_bf = pd.unique(data[best_feature])\n",
     "    Split_result = []\n",
     "    sum_f = 0\n",
-    "    for feture_son in unique_bf:\n",
-    "        data_son = data[data[best_feture]==feture_son] # using subfeature to split data.\n",
+    "    for feature_son in unique_bf:\n",
+    "        data_son = data[data[best_feature]==feature_son] # using subfeature to split data.\n",
     "        label_size = pd.unique(data_son.iloc[:,-1]).size\n",
     "        \n",
     "        if label_size == 1:\n",
     "            sum_f += data_son.index.size\n",
-    "            Split_result.append([best_feture,feture_son])\n",
+    "            Split_result.append([best_feature,feature_son])\n",
     "        else:\n",
-    "            drop_data_son = data_son.drop(columns=best_feture) # drop used best feature.\n",
-    "            Split_result.append([best_feture,feture_son,drop_data_son])\n",
+    "            drop_data_son = data_son.drop(columns=best_feature) # drop used best feature.\n",
+    "            Split_result.append([best_feature,feature_son,drop_data_son])\n",
     "    \n",
     "    return Split_result,sum_f"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -569,7 +569,7 @@
     }
    ],
    "source": [
-    "Split_result,sum_f = split_Trees(data,best_feture)\n",
+    "Split_result,sum_f = split_Trees(data,best_feature)\n",
     "print('split result is:',Split_result)\n",
     "print('-----------------------------')\n",
     "print('using number of data in best feature:',sum_f)"
@@ -607,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -626,8 +626,8 @@
     "    sumOflabels = {}\n",
     "    \n",
     "    # 获取最后未能完全划分的样本\n",
-    "    for feture,feture_son in REST:\n",
-    "        data = data[data[feture] != feture_son]\n",
+    "    for feature,feature_son in REST:\n",
+    "        data = data[data[feature] != feature_son]\n",
     "    \n",
     "    data_labels = data.iloc[:,-1]\n",
     "    # 统计未能完全划分数据的标签个数\n",
@@ -639,14 +639,14 @@
     "            \n",
     "    # 取出现次数最多的标签作为概率标签\n",
     "    prob_label = sorted(sumOflabels.items(),key=lambda x:x[1],reverse=True)[0][0]\n",
-    "    feature_prob = [feture,'!'+feture_son,prob_label] \n",
+    "    feature_prob = [feature,'!'+feature_son,prob_label] \n",
     "     \n",
     "    return feature_prob"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -665,25 +665,25 @@
     "    \"\"\"\n",
     "    REST = [] # 存放所有的叶结点\n",
     "    ALL_data_size = data.index.size # 获得样本总数\n",
-    "    ALL_data_fetures = data.columns[:-1].size # 获取所有特征数\n",
+    "    ALL_data_features = data.columns[:-1].size # 获取所有特征数\n",
     "    sum_data = 0\n",
-    "    sum_feture = 0\n",
+    "    sum_feature = 0\n",
     "    while 1:\n",
     "        # 1.所有样本都已经使用完毕\n",
     "        if sum_data == ALL_data_size:\n",
     "            print('所以样本划分完毕')\n",
     "            return REST,True\n",
     "        # 2.所有特征使用完毕；2.1 样本使用完毕,2.2样本未划分完毕\n",
-    "        if sum_feture == ALL_data_fetures:\n",
+    "        if sum_feature == ALL_data_features:\n",
     "            if sum_data == ALL_data_size:\n",
     "                print('样本划分完毕')\n",
     "                return REST,True\n",
     "            else:\n",
     "                print('特征已经使用完毕,但是样本依然没有完全划分')\n",
     "                return REST,False\n",
-    "        best_feture = calcShannonEnt_feature(data)\n",
-    "        sum_feture +=1 # 每得到一个特征 使用特征自加1\n",
-    "        Split_result,sum_f = split_Trees(data,best_feture)\n",
+    "        best_feature = calcShannonEnt_feature(data)\n",
+    "        sum_feature +=1 # 每得到一个特征 使用特征自加1\n",
+    "        Split_result,sum_f = split_Trees(data,best_feature)\n",
     "        sum_data += sum_f\n",
     "        for i in Split_result:\n",
     "            if len(i) == 2: # 判断为叶结点的情况\n",
@@ -694,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -711,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
@@ -729,7 +729,7 @@
        "[['no surfacing', 'n'], ['flippers', 'y'], ['flippers', 'n']]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -747,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -761,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -777,7 +777,7 @@
        "[['no surfacing', 'n'], ['flippers', 'n'], ['flippers', '!n', 'y']]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -849,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -938,7 +938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1104,7 +1104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1134,7 +1134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1143,7 +1143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {
     "scrolled": false
    },
@@ -1320,7 +1320,7 @@
        "14  老年   否      否   一般  否"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1332,7 +1332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1341,7 +1341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {
     "scrolled": true
    },
@@ -1378,7 +1378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1397,7 +1397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1653,7 +1653,7 @@
        "23  presbyopic     hyper        yes   normal  no lenses"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1666,7 +1666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1675,7 +1675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1729,7 +1729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1742,7 +1742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1778,7 +1778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1792,7 +1792,7 @@
        "            splitter='best')"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1804,7 +1804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1813,7 +1813,7 @@
        "0.9666666666666667"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1824,7 +1824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
