--- a/3-2Naive Bayes(Application).ipynb
+++ b/3-2Naive Bayes(Application).ipynb
@@ -262,7 +262,7 @@
     "\n",
     "**Ps:**\n",
     "\n",
-    "到目前未知，我们将每个词的出现与否作为一个特征，这可以被描述为词集模型(set-of-words model)。如果一个词在文档中出现不止一次，这可能意味着包含该词是否出现在文档中所不能表达的某种信息，这种方法被称为词袋模型(bags-of-words model)。在词袋中，每个单词可以出现多次，而在词集中，每个词只能出现一次。为了适应词袋模型，每当遇到一个单词时，它会增加词向量中的对应值，而不只是将对应的数值设为1。\n",
+    "到目前为止，我们将每个词的出现与否作为一个特征，这可以被描述为词集模型(set-of-words model)。如果一个词在文档中出现不止一次，这可能意味着包含该词是否出现在文档中所不能表达的某种信息，这种方法被称为词袋模型(bags-of-words model)。在词袋中，每个单词可以出现多次，而在词集中，每个词只能出现一次。为了适应词袋模型，每当遇到一个单词时，它会增加词向量中的对应值，而不只是将对应的数值设为1。\n",
     "\n",
     "另外，词汇表中的一小部分单词却占据了所有文本用词的大部分。产生这种现象的原因是因为语言中大部分都是冗余和结构辅助性内容。一个常用的方法是移除高频词，另一个常用的方法是不仅移除高频词，同时从某个预定词表中移除结构上的辅助词。该词表称为停用词表（stop word list），当然也可以花大量时间对切分器进行优化。\n",
     "\n",
@@ -632,7 +632,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "可以看出,如果某个单词不在词集中,那么即使是恶意词汇也是不能区分的,所以Naive Bayes是很受训练样本的控制的.如果训练样本过小,那么很肯能会出现很多分类错误的情况."
+    "可以看出,如果某个单词不在词集中,那么即使是恶意词汇也是不能区分的,所以Multinomial Naive Bayes是很受训练样本的控制的.如果训练样本过小,那么很肯能会出现很多分类错误的情况."
    ]
   },
   {
