--- a/7-3Gaussian Mixture Model(Application).ipynb
+++ b/7-3Gaussian Mixture Model(Application).ipynb
@@ -130,7 +130,7 @@
     "\n",
     "\n",
     "如果存在C个高斯的混合模型,且源数据X的形状是(m,d):\n",
-    "- m: Number of sample,d:Dimension or fetures.\n",
+    "- m: Number of sample,d:Dimension or features.\n",
     "\n",
     "\n",
     "$\\alpha_l$: 每一个高斯模型都含有一个权重$\\alpha$,所以$\\alpha$的形状是(C,),初始值我们一般都选择$\\frac{1}{C}$是比较合理的.\n",
