--- a/8-2 K-Means(Application).ipynb
+++ b/8-2 K-Means(Application).ipynb
@@ -125,7 +125,7 @@
    "source": [
     "### 2.1 K-Means Original Model\n",
     "\n",
-    "假设现在数据的维度是m,n:m个样本,n个fetures.\n",
+    "假设现在数据的维度是m,n:m个样本,n个features.\n",
     "\n",
     "参数维度:\n",
     "- center:有K个质心且每个质心都能与样本计算距离,所以center(K,n)\n",
