--- a/3-1Naive Bayes(Theory).ipynb
+++ b/3-1Naive Bayes(Theory).ipynb
@@ -237,6 +237,260 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### 3.1 Naive Bayes MLE 推导\n",
+    "\n",
+    "设数据$T={(x_1,y_1),(x_2,y_2),...,(x_N,y_N)}$其中$x\\in R^{d}$且第$j$个分量$x^{(j)}$取值为${a_{j1},a_{j2},...,a_{jS_j}}$共$s_j$个.$y$为类标签.共$K$类即$y$的取值为${c_1,c_2,...,c_K}$\n",
+    "\n",
+    "对于第$i$个数据$(x_i,y_i)$有$P(X=x_i,Y=y_i)=P(X^{(1)}=x_{i}^{(1)},...,X^{(d)}=x_{i}^{(d)},Y=y_i)$\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "有联合概率可以得到:\n",
+    "\n",
+    "$P(X=x_i,Y=y_i)=P(X^{(1)}=x_{i}^{(1)},...,X^{(d)}=x_{i}^{(d)},Y=y_i)=\\prod_{j=1}^{d}P(X^{(j)}=x^{(j)}_i|Y=y_i)\\cdot P(Y=y_i)$\n",
+    "\n",
+    "所以似然函数即为:\n",
+    "\n",
+    "$L(\\theta)=\\prod_{i=1}^{N}P(X=x_i,Y=y_i)=\\prod_{i=1}^{N}\\prod_{j=1}^{d}P(X^{(j)}=x_{i}^{(j)}|Y=y_i)\\cdot P(Y=y_i)$其中$\\theta$为所有参数\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "取对数$L(\\theta)$:\n",
+    "\n",
+    "$L(\\theta)=\\sum_{i=1}^{N}logP(Y=y_i)+\\sum_{i=1}^{N}\\sum_{j=1}^{d}logP(X^{(j)}=x_i^{(j)}|Y=y_i)$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**1.先求先验概率$P(Y=c_{k}):$**\n",
+    "\n",
+    "令$\\alpha_{k}=P(Y=c_{k})$\n",
+    "\n",
+    "所以:\n",
+    "\n",
+    "$P(Y=y_i)=\\prod_{k=1}^{K}\\alpha_{k}^{I(y_i=c_{k})}$\n",
+    "\n",
+    "其中$I(y_i=c_{k})$为指示函数:\n",
+    "\n",
+    "$I(y_i=c_{k}) = \\left\\{\\begin{matrix}\n",
+    "0 &y_i\\neq c_k \\\\ \n",
+    " 1&y_i=c_k \n",
+    "\\end{matrix}\\right.$\n",
+    "\n",
+    "举个简单的例子:比如对于某个$i$样本,对于当前$y_i$搜索所有的$c_k$如果$y_i=c_{k}$,那么对应的概率$P(Y=y_i)$存在,否则为1,对其无影响.\n",
+    "\n",
+    "那么对其$\\alpha_{k}$有约束:$\\sum_{k}^{K}\\alpha_{k}=1$,也就是说所有的$y_i$的概率之和为1.\n",
+    "\n",
+    "所以我们可以采用[拉格朗日乘子法](https://zh.wikipedia.org/wiki/%E6%8B%89%E6%A0%BC%E6%9C%97%E6%97%A5%E4%B9%98%E6%95%B0),且由于$L(\\theta)$中的第二项与$\\alpha_k$无关,不做考虑.\n",
+    "\n",
+    "$L(\\alpha_k,\\lambda)=\\sum_{i=1}^{N}log(\\prod_{k=1}^{K}\\alpha_{k}^{I(y_i=c_{k})})+\\lambda(\\sum_{k}^{K}\\alpha_{k} -1)=\\sum_{i=1}^{N}\\sum_{k=1}^{K}I(y_i=c_{k})\\cdot log\\alpha_k+\\lambda(\\sum_{k}^{K}\\alpha_{k} -1)$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "对于$\\alpha_k$求偏导:\n",
+    "\n",
+    "$\\frac{\\partial L(\\alpha_k,\\lambda)}{\\partial \\alpha_k}=\\sum_{i=1}^{N}I(y_i=c_k)\\frac{1}{\\alpha_k}+\\lambda=0$\n",
+    "\n",
+    "$\\Rightarrow $\n",
+    "\n",
+    "$\\alpha_k=\\frac{\\sum_{i=1}^{N}I(y_i=c_k)}{-\\lambda}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "这里对于$\\alpha_k$求偏导,由于只是对某一个$k$求偏导,所以在$\\sum_{k=1}^{K}$中只有某一个$k$能够作为变量求偏导,其他的$k$即为常数,所以在求偏导完成后就没有$\\sum_{k=1}^{K}$项了.\n",
+    "\n",
+    "那么对于约束条件$\\sum_{k=1}^{K}=1$有:\n",
+    "\n",
+    "$\\frac{\\sum_{k=1}^{K}\\sum_{i=1}^{N}I(y_i=c_k)}{-\\lambda}=1$\n",
+    "\n",
+    "\n",
+    "$\\Rightarrow $\n",
+    "\n",
+    "$\\lambda=-N$ \n",
+    "\n",
+    "\n",
+    "\n",
+    "所以:\n",
+    "\n",
+    "$\\alpha_k=\\frac{\\sum_{i=1}^{N}I(y_i=c_k)}{N}$\n",
+    "\n",
+    "即:\n",
+    "\n",
+    "$P(Y=c_k)=\\frac{\\sum_{i=1}^{N}I(y_i=c_k)}{N}$\n",
+    "\n",
+    "也就是说,以前我们比如遇到这样的一个问题:\n",
+    "\n",
+    "$Y=(1,2,3)$求1所占的概率$P(Y=1)$为什么是$\\frac{1}{3}$\n",
+    "\n",
+    "**Ps:**\n",
+    "\n",
+    "(1) $\\sum_{k=1}^{K}\\sum_{i=1}^{N}I(y_i=c_k)$实际上就是将整体$K$个特征下的$N$个特征全部走一遍,那么总和即为$N$\n",
+    "\n",
+    "举个例子:\n",
+    "\n",
+    "比如$(x^{(1)}_1=1,x^{(2)}_1=L,x^{(1)}_2=1,x^{(2)}_2=M,x^{(1)}_3=0,x^{(2)}_3=S),(y_1=1,y_2=-1,y_3=1),C={1,-1}$\n",
+    "\n",
+    "那么当$k=1$的时候即$c_k=1$,那么对于$i:1\\rightarrow3$,指示产生的结果是$1,0,1$\n",
+    "\n",
+    "当$k=2$的时候即$c_k=-1$,那么对于$i:1\\rightarrow3$,指示函数产生结果是$0,1,0$\n",
+    "\n",
+    "那么求和即为$N=3$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**2.求条件概率$P(x^{(j)}=a_{jl}|Y=c_k)$**\n",
+    "\n",
+    "其中$j=1,2,...d,l=1,...,s_{j},k=1,...,K$\n",
+    "\n",
+    "我们令$P(x^{(j)}=a_{jl}|Y=c_k)=\\beta_{lk}$\n",
+    "\n",
+    "求条件概率我们需要知道其联合概率,所以:\n",
+    "\n",
+    "那么对于联合概率(联合分布)$P(x^{(j)}=a_{jl},Y=c_k)$:\n",
+    "\n",
+    "$P(x^{(j)}=a_{jl},Y=c_k)=P(x^{(j)}=a_{jl}|Y=c_k)\\cdot P(Y=c_k)=\\beta_{lk}\\cdot \\alpha_{k}$\n",
+    "\n",
+    "此时我们的似然函数:\n",
+    "\n",
+    "$L(\\theta)=\\prod_{i=1}^{N}\\prod_{j=1}^{d}P(X^{(j)}=x^{(j)}_j,Y=y_i)$.\n",
+    "\n",
+    "而$P(X^{(j)}=x^{(j)}_j,Y=y_i)=\\prod_{l=1}^{S_{j}}\\prod_{k=1}^{K}(\\beta_{lk}\\cdot \\alpha_{k})^{I(x_{i}^{j}=a_{jl},y_i=c_k)}$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "所以:\n",
+    "\n",
+    "$logL(\\theta)=\\sum_{i=1}^{N}\\sum_{j=1}^{d}\\sum_{l=1}^{s_{j}}\\sum_{k=1}^{K}[I(x_{i}^{j}=a_{jl},y_i=c_k)\\cdot(log\\beta_{lk}+log\\alpha_k)]$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "由于$log\\alpha_k$与$\\beta_{lk}$无关,我们可以不考虑\n",
+    "\n",
+    "则:\n",
+    "\n",
+    "$l(\\theta)=logL(\\theta)=\\sum_{i=1}^{N}\\sum_{j=1}^{d}\\sum_{l=1}^{s_{j}}\\sum_{k=1}^{K}I(x_{i}^{j}=a_{jl},y_i=c_k)\\cdot log\\beta_{lk}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "注意到约束为:\n",
+    "\n",
+    "对于固定的$j$(每一个特征)有$\\sum_{l=1}^{s_{j}}\\beta_{lk}=1$(也就是说第$i$个样本下的第$j$个特征下的所有可能取值$s_{j}$的概率和为1)\n",
+    "\n",
+    "比如继续沿用上面的例子:\n",
+    "\n",
+    "当$c_k=1,j=1$的时候,$s_j={1,0}$,那么将是$\\sum_{l=1}^{s_j}P(x^{(1)}=a_{1l}|Y=1)=\\frac{1}{2}+\\frac{1}{2}=1$\n",
+    "\n",
+    "所以对于$j=1,2,...,d$那么将有$d$个约束条件\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "求$\\beta_{lk}$注意$l$总是落在某个$x^{(j)}$的取值集合中,\n",
+    "\n",
+    "先取定$j$,那么对应的拉格朗日乘子为$\\lambda_j$\n",
+    "\n",
+    "则:\n",
+    "\n",
+    "$L(\\beta_{lk},\\lambda_j)=\\sum_{i=1}^{N}\\sum_{j=1}^{d}\\sum_{l=1}^{s_j}\\sum_{k=1}^{K}I(x_i^{j}=a_{jl},y_i=c_{k})log\\beta_{lk}+\\lambda_{j}(\\sum_{l=1}^{s_j=}\\beta_{lk}-1)$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "样本$i$对于某个$\\beta_{lk}$求偏导,那么和之前一样$\\sum_{j=1}^{d}\\sum_{l=1}^{s_j}\\sum_{k=1}^{K}$中只有一项是起做用的,所以可以去掉,即:\n",
+    "\n",
+    "$\\frac{\\partial L(\\beta_{lk},\\lambda_j)}{\\partial \\beta_{lk}}=\\sum_{j=1}^{N}I(x_{i}^{(j)}=a_{jl},y_i=c_k)\\cdot \\frac{1}{\\beta_{lk}}\\cdot\\lambda_j=0$\n",
+    "\n",
+    "$\\Rightarrow$\n",
+    "\n",
+    "$\\beta_{lk}=-\\frac{1}{\\lambda_j}\\sum_{i=1}^{N}I(x_i^{(j)}=a_{jl},y_i=c_k)$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "那么根据约束条件:\n",
+    "\n",
+    "$\\sum_{l=1}^{s_{j}}\\beta_{lk}=-\\frac{1}{\\lambda_j}\\sum_{l=1}^{s_{j}}\\sum_{i=1}^{N}I(x_i^{(j)}=a_{jl},y_i=c_k)=1$\n",
+    "\n",
+    "$\\Rightarrow$\n",
+    "\n",
+    "$\\lambda_j = - \\sum_{l=1}^{s_{j}}\\sum_{i=1}^{N}I(x_i^{(j)}=a_{jl},y_i=c_k)$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "对于某个样本$i$的特征$j$下的所有可能取值的累和实际上就等于$y_i=c_k$的个数,也就是说:\n",
+    "\n",
+    "$\\sum_{l=1}^{s_{j}}I(x_i^{(j)}=a_{jl},y_i=c_k)$ 等效于 $I(y_i=c_k)$\n",
+    "\n",
+    "可以参照上面的例子想想.\n",
+    "\n",
+    "所以:\n",
+    "\n",
+    "$\\lambda_j = - \\sum_{i=1}^{N}I(y_i=c_k)$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "那么:\n",
+    "\n",
+    "$\\beta_{lk}=\\frac{\\sum_{i=1}^{N}I(x_i^{(j)}=a_{jl},y_i=c_k)}{\\sum_{i=1}^{N}I(y_i=c_k)}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Ps:**\n",
+    "\n",
+    "对于数据$X={1,2,3},y={1,0,1}$\n",
+    "\n",
+    "以前在计算$P(X=1|Y=1)=\\frac{1}{2}$的原理\n",
+    "\n",
+    "--------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 4 Naive Bayes Algorithm\n",
     "\n",
     "下面给出NB的算法\n",
