--- a/3-1Naive Bayes(Theory).ipynb
+++ b/3-1Naive Bayes(Theory).ipynb
@@ -430,7 +430,7 @@
    "source": [
     "样本$i$对于某个$\\beta_{lk}$求偏导,那么和之前一样$\\sum_{j=1}^{d}\\sum_{l=1}^{s_j}\\sum_{k=1}^{K}$中只有一项是起做用的,所以可以去掉,即:\n",
     "\n",
-    "$\\frac{\\partial L(\\beta_{lk},\\lambda_j)}{\\partial \\beta_{lk}}=\\sum_{j=1}^{N}I(x_{i}^{(j)}=a_{jl},y_i=c_k)\\cdot \\frac{1}{\\beta_{lk}}\\cdot\\lambda_j=0$\n",
+    "$\\frac{\\partial L(\\beta_{lk},\\lambda_j)}{\\partial \\beta_{lk}}=\\sum_{i=1}^{N}I(x_{i}^{(j)}=a_{jl},y_i=c_k)\\cdot \\frac{1}{\\beta_{lk}}+\\lambda_j=0$\n",
     "\n",
     "$\\Rightarrow$\n",
     "\n",
