--- a/3-3 Naive Bayes(Gaussian).ipynb
+++ b/3-3 Naive Bayes(Gaussian).ipynb
@@ -74,7 +74,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x115478048>"
+       "<matplotlib.collections.PathCollection at 0x1170edb00>"
       ]
      },
      "execution_count": 4,
@@ -159,7 +159,7 @@
     "\n",
     "**Ps:**\n",
     "\n",
-    "(1) 每个样本$x_i$有$n$个特征,GNB将每个特征看成是独立的一维高斯分布,所以$n$个特征有$n$个$\\mu,\\sigma$,记为$\\mu=\\{\\mu_1,...,mu_n\\},\\Sigma=\\{\\sigma_1,...,\\sigma_n\\}$,另外有$K$类标签,即会有$K$个$\\mu,\\sigma$组.所以参数$\\mu,\\sigma$的形状是(K,n)\n",
+    "(1) 每个样本$x_i$有$n$个特征,GNB将每个特征看成是独立的一维高斯分布,所以$n$个特征有$n$个$\\mu,\\sigma$,记为$\\mu=\\{\\mu_1,...,\\mu_n\\},\\Sigma=\\{\\sigma_1,...,\\sigma_n\\}$,另外有$K$类标签,即会有$K$个$\\mu,\\sigma$组.所以参数$\\mu,\\sigma$的形状是(K,n)\n",
     "\n",
     "(2) 在不同$K$标签下的数据求的$K$个参数组,即可以得到条件概率$P(X|Y=k)$\n",
     "\n",
@@ -211,7 +211,7 @@
     "\n",
     "$\\sigma_1=[\\sigma_{10},\\sigma_{11}]=[0.115,0.225]$\n",
     "\n",
-    "$P(Y=0)=0.5$"
+    "$P(Y=1)=0.5$"
    ]
   },
   {
@@ -414,13 +414,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "predict labels is:  <function predict at 0x1154047b8>\n"
+      "predict labels is:  [1 1 1 0 0 0 0 1 0 0 0 0 1 0 1 0 1 1 0 0]\n"
      ]
     }
    ],
    "source": [
     "predict_label = predict(pri_prob=pri_prob,mu=mu,sigma=sigma,X_test=X_test)\n",
-    "print(\"predict labels is: \",predict)"
+    "print(\"predict labels is: \",predict_label)"
    ]
   },
   {
