--- a/3-2Naive Bayes(Application).ipynb
+++ b/3-2Naive Bayes(Application).ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +262,7 @@
     "\n",
     "**Ps:**\n",
     "\n",
-    "到目前为止，我们将每个词的出现与否作为一个特征，这可以被描述为词集模型(set-of-words model)。如果一个词在文档中出现不止一次，这可能意味着包含该词是否出现在文档中所不能表达的某种信息，这种方法被称为词袋模型(bags-of-words model)。在词袋中，每个单词可以出现多次，而在词集中，每个词只能出现一次。为了适应词袋模型，每当遇到一个单词时，它会增加词向量中的对应值，而不只是将对应的数值设为1。\n",
+    "到目前未知，我们将每个词的出现与否作为一个特征，这可以被描述为词集模型(set-of-words model)。如果一个词在文档中出现不止一次，这可能意味着包含该词是否出现在文档中所不能表达的某种信息，这种方法被称为词袋模型(bags-of-words model)。在词袋中，每个单词可以出现多次，而在词集中，每个词只能出现一次。为了适应词袋模型，每当遇到一个单词时，它会增加词向量中的对应值，而不只是将对应的数值设为1。\n",
     "\n",
     "另外，词汇表中的一小部分单词却占据了所有文本用词的大部分。产生这种现象的原因是因为语言中大部分都是冗余和结构辅助性内容。一个常用的方法是移除高频词，另一个常用的方法是不仅移除高频词，同时从某个预定词表中移除结构上的辅助词。该词表称为停用词表（stop word list），当然也可以花大量时间对切分器进行优化。\n",
     "\n",
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -412,6 +412,7 @@
     "                Vec_words[i,index_] = 1\n",
     "            except:\n",
     "                print('the word {} is not in my Vocabulary!'.format(word))\n",
+    "                exit(0)\n",
     "            \n",
     "            \n",
     "    return Vec_words"
@@ -419,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -435,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
@@ -443,18 +444,18 @@
     {
      "data": {
       "text/plain": [
-       "array([[1., 0., 0., 1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 1., 0., 1.,\n",
-       "        1., 0., 0., 0., 0., 0., 1., 0., 0., 0., 0., 0., 0., 0., 0., 1.],\n",
-       "       [0., 1., 1., 1., 0., 0., 1., 1., 0., 0., 0., 1., 0., 0., 0., 0.,\n",
-       "        0., 1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 1., 0.],\n",
-       "       [0., 1., 0., 0., 1., 1., 0., 0., 0., 0., 1., 0., 0., 0., 0., 0.,\n",
-       "        0., 0., 1., 0., 1., 0., 1., 0., 0., 1., 0., 0., 0., 0., 0., 0.],\n",
-       "       [0., 0., 0., 0., 0., 0., 0., 0., 1., 0., 0., 1., 0., 0., 0., 0.,\n",
-       "        0., 0., 0., 1., 0., 1., 0., 0., 0., 0., 1., 0., 0., 0., 0., 0.],\n",
-       "       [0., 1., 1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 1., 0., 1., 0.,\n",
-       "        0., 0., 0., 0., 0., 1., 1., 1., 0., 0., 0., 1., 0., 1., 0., 0.],\n",
-       "       [0., 0., 0., 1., 0., 0., 0., 0., 0., 1., 0., 1., 0., 0., 0., 0.,\n",
-       "        0., 0., 0., 0., 0., 0., 0., 0., 1., 0., 1., 0., 1., 0., 0., 0.]])"
+       "array([[0., 0., 1., 0., 0., 0., 0., 1., 0., 0., 0., 0., 1., 0., 0., 0.,\n",
+       "        0., 0., 0., 0., 0., 0., 0., 0., 1., 0., 1., 1., 0., 1., 0., 0.],\n",
+       "       [0., 1., 0., 0., 0., 0., 0., 0., 1., 0., 0., 1., 1., 0., 0., 1.,\n",
+       "        0., 0., 0., 0., 0., 0., 1., 0., 0., 1., 0., 0., 0., 0., 0., 1.],\n",
+       "       [0., 0., 0., 1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 1., 1., 1.,\n",
+       "        0., 1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 1., 1., 0., 1., 0.],\n",
+       "       [0., 0., 0., 0., 1., 0., 0., 0., 0., 1., 0., 1., 0., 0., 0., 0.,\n",
+       "        1., 0., 1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 1., 0., 0., 0., 1., 0., 0., 0., 0., 0., 1.,\n",
+       "        0., 0., 0., 1., 1., 1., 1., 1., 0., 0., 0., 1., 0., 0., 0., 0.],\n",
+       "       [1., 0., 0., 0., 0., 0., 1., 0., 0., 0., 1., 1., 1., 0., 0., 0.,\n",
+       "        0., 0., 1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.]])"
       ]
      },
      "metadata": {},
@@ -474,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true
    },
@@ -482,10 +483,10 @@
     {
      "data": {
       "text/plain": [
-       "True"
+       "False"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -516,25 +517,27 @@
     "\n",
     "在计算条件概率之前,我们需要先将测试样本转换为向量的形式,然后再计算条件概率.\n",
     "\n",
-    "因为我们这里选用的是词集模型,所以在对比测试样本和训练样本有多少个相同的时候只要使两个样本相加,得到的结果大于1的即视为在训练样本中出现:\n",
+    "因为我们这里选用的是词集模型,那么词集中的某一个样本的长度即为特征的个数,也就是说我们需要计算:\n",
     "\n",
-    "也就是说,在求条件概率$\\sum_{i=1}^{N}I(x_{i}^{j}=a_{jl},y_i=c_k)$\n",
+    "假设测试样本为$[0,0,1,0,......]$,且先计算$labels=1$\n",
+    "\n",
+    "那么我们需要计算:\n",
+    "\n",
+    "$P(x^{(1)}=0|Y=1)P(X^{(2)}=0|Y=1)P(x^{(3)}=1|Y=1)....P(x^{(j)}=x_i|Y=1),j=1,...,d$\n",
+    "\n",
+    "所以我们可以使用:\n",
     "\n",
     "```python\n",
+    "cond_molecule = (test_X[m]==son_Vec_words).sum(axis=0)```\n",
     "\n",
-    "vec_test_words = Word2Vec_set(mix_word,test_words)\n",
-    "...\n",
-    "same_words = np.where((vec_test_words + label_data)>1)[0]\n",
-    "molecule = same_words.shape[0] + gamma \n",
-    "\n",
-    "```\n",
+    "来一次统计$x^{(1)}=0,X^{(2)}=0,...,x^{(j)}=x_i$的个数.这里的$axis=0$意味着按照特征之间进行相加.这样就会一次性得到所有特征的个数总和,然后再除上$Y=1$的个数即为条件概率的值.\n",
     "\n",
     "(3)计算后验概率,比较两类后验概率的大小,选择最大的作为预测标签."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -556,42 +559,35 @@
     "       predict_label: Predict label. \n",
     "    \n",
     "    \"\"\"\n",
-    "    K = len(set(classVec))\n",
-    "    list_set_classVec = list(set(classVec))\n",
-    "    m = len(test_words)\n",
+    "    unique_y = np.unique(classVec)\n",
+    "    m_test,n_features = len(test_words),len(unique_y)\n",
+    "    predict = []\n",
+    "    # calculate  pri prob\n",
+    "    p_0 =(np.sum(classVec)+gamma) / (classVec.shape[0] + n_features*gamma)\n",
+    "    p_1 = 1 - p_0\n",
     "    \n",
-    "    # 初始化先验概率数组\n",
-    "    pri_prob= np.zeros(K)\n",
-    "    # 初始化后验概率\n",
-    "    Pos_proba = np.zeros((m,K))\n",
-    "    # 计算先验概率,对于二分类\n",
-    "    P_y1 = classVec.sum() / classVec.shape[0]\n",
-    "    P_y0 = 1 - P_y1\n",
     "    \n",
-    "    # 计算条件概率\n",
-    "    vec_test_words = Word2Vec_set(mix_word,test_words)\n",
-    "    for i in range(m): # 循环测试样本中的m个样本\n",
-    "        \n",
-    "        for k in range(K):\n",
-    "            \n",
-    "            label_index = np.where(classVec==list_set_classVec[k])[0]\n",
-    "            label_data = Vec_words[label_index,:] \n",
-    "            same_words = np.where((vec_test_words[i] + label_data)>1)[0] #Vec_words中每一句与test_words相同的词个数\n",
-    "            molecule = same_words.shape[0] + gamma # 分子部分\n",
-    "            denominator = (classVec == list_set_classVec[k]).sum() + len(mix_word) * gamma\n",
-    "            \n",
-    "            # 后验概率\n",
-    "            Pos_proba[i,k] = molecule / denominator\n",
-    "        \n",
-    "        \n",
-    "    argmax_index = np.argmax(Pos_proba,axis=1)\n",
+    "    # calculate condition prob\n",
+    "    test_X = Word2Vec_set(mix_word,test_words)\n",
+    " \n",
+    "    res_condition_prob = np.zeros((m_test,n_features))\n",
     "    \n",
+    "    for m in range(m_test):\n",
+    "        for n in range(n_features):\n",
+    "            where_index = np.where(classVec==unique_y[n])[0]\n",
+    "            son_Vec_words = Vec_words[where_index]\n",
+    "            cond_molecule = (test_X[m]==son_Vec_words).sum(axis=0) + gamma\n",
+    "            Sj = np.unique(test_X[m]).shape[0]\n",
+    "            cond_denominator = (where_index.shape[0] + (Sj * gamma))\n",
+    "            condition_prob = np.product(cond_molecule / cond_denominator)\n",
+    "            res_condition_prob[m,n] = condition_prob\n",
+    "        \n",
     "    if is_print:\n",
-    "        \n",
-    "        print(list_set_classVec)\n",
-    "        print(Pos_proba)\n",
+    "        print(res_condition_prob)\n",
     "    \n",
-    "    return argmax_index"
+    "    predict = np.argmax(res_condition_prob,axis=1)\n",
+    "    \n",
+    "    return predict"
    ]
   },
   {
@@ -603,26 +599,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "the word you is not in my Vocabulary!\n",
-      "the word are is not in my Vocabulary!\n",
-      "the word asshole is not in my Vocabulary!\n",
-      "[0, 1]\n",
-      "[[0.28571429 0.08571429]\n",
-      " [0.02857143 0.11428571]\n",
-      " [0.02857143 0.02857143]]\n",
-      "predict label:  [0 1 0]\n"
+      "the word SB is not in my Vocabulary!\n",
+      "[[1.47050342e-07 5.74415397e-10]\n",
+      " [1.04687206e-07 6.27414792e-06]\n",
+      " [5.28535323e-04 1.97977200e-03]]\n",
+      "predict label:  [0 1 1]\n"
      ]
     }
    ],
    "source": [
-    "test_words = [['my','dog','has','flea','problems','help','please'],['you','are','stupid'],['asshole']]\n",
+    "test_words = [['my','dog','has','flea','problems','help','please'],['stupid'],['SB']]\n",
     "\n",
     "predict_label = NaiveByes_word(mix_word,Vec_words,test_words,classVec,1,True)\n",
     "print(\"predict label: \",predict_label)"
@@ -632,7 +625,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "可以看出,如果某个单词不在词集中,那么即使是恶意词汇也是不能区分的,所以Multinomial Naive Bayes是很受训练样本的控制的.如果训练样本过小,那么很肯能会出现很多分类错误的情况."
+    "可以看出,如果某个单词不在词集中,那么即使是恶意词汇分类正确我们也是不可取的,因为这是受到训练样本控制的,也就是说考虑极端情况,\n",
+    "\n",
+    "如果所有的单词都不在词集中,那么产生的将是$[0,0,0,...,0]$的词向量,这样最终的结果会受到训练样本中$0$的个数影响.因为训练样本中0的个越多,那么条件概率也就越高.\n",
+    "\n",
+    "所以Naive Bayes是很受训练样本的控制的.如果训练样本过小,那么很肯能会出现很多分类错误的情况."
    ]
   },
   {
