--- a/3-3 Naive Bayes(Gaussian).ipynb
+++ b/3-3 Naive Bayes(Gaussian).ipynb
@@ -74,7 +74,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x1170edb00>"
+       "<matplotlib.collections.PathCollection at 0x11e957d30>"
       ]
      },
      "execution_count": 4,
@@ -345,7 +345,7 @@
    "source": [
     "### 3.1 testing model.\n",
     "\n",
-    "在计算高斯值的时候我们可以使用scipy库中的multivariate_normal.pdf以便于快速计算,当然手写高斯公式也是非常简单的."
+    "在计算高斯值的时候我们可以使用scipy库中的[multivariate_normal.pdf](https://docs.scipy.org/doc/scipy-0.14.0/reference/generated/scipy.stats.multivariate_normal.html)以便于快速计算,当然手写高斯公式也是非常简单的."
    ]
   },
   {
@@ -361,21 +361,26 @@
     "a = c * b # 保留12小数点内\n",
     "```\n",
     "\n",
-    "下面这段代码代表的意思是:\n",
+    "下面这段代码:\n",
     "\n",
     "```python\n",
     "prob = multivariate_normal.pdf(X_test,mean=mu[k],cov=sigma[k]) * pri_prob[k]```\n",
     "\n",
-    "先用Numpy的广播机制,将mu,sigma广播为与X_test的形状相同,同时计算m个样本的\n",
+    "先用Numpy的广播机制,将mu,sigma广播为与X_test的形状相同,同时计算m个样本\n",
     "\n",
     "**Ps:**\n",
     "\n",
-    "当协方差矩阵是对角阵的时候,多元高斯分布就是一组相互独立的一元高斯分布的乘积(组合).这与我们的设想是一样,因为在Naive Bayes的条件是**特征独立**."
+    "(1) 这里的sigma[0]实际上是一个类似于[a,b]的形式,那么multivariate_normal会将其扩展为对角阵的形式$\\begin{bmatrix}\n",
+    "a &0 \\\\ \n",
+    " 0& b\n",
+    "\\end{bmatrix}$.\n",
+    "\n",
+    "(2)当协方差矩阵是对角阵的时候,多元高斯分布就是一组相互独立的一元高斯分布的乘积(组合).这与我们的设想是一样,因为在Naive Bayes的条件是**特征独立**."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
